<resources>
    <string name="app_name">My Application</string>
    <string name="column1">NAME</string>
    <string name="column2">NIC</string>
    <string name="column3">ADDRESS</string>
    <string name="column4">EMAIL</string>
    <string name="column5">PHONE</string>
    <string name="column6">LICENSE</string>
    <string name="column7">USERNAME</string>
    <string name="column8">PASSWORD</string>
    <string name="txt1">USERNAME</string>
    <string name="txt2">PASSWORD</string>
    <string name="btn1">LOGIN</string>
    <string name="btn2">REGISTER HERE</string>
    <string name="txt3">Full Name</string>
    <string name="txt4">User Name</string>
    <string name="txt5">Email</string>
    <string name="txt6">Address</string>
    <string name="txt7">Phone Number</string>
    <string name="txt8">Password</string>
    <string name="txt9">Confirm Password</string>
    <string name="txt10">Gender</string>
    <string name="radio1">Male</string>
    <string name="radio2">Female</string>
    <string name="btn3">REGISTER</string>
    <string name="txt11">Admin Dashboard</string>
    <string name="txt12">NEW DELIVERY BOY</string>
    <string name="txt13">DELIVERY STATUS</string>
    <string name="txt14">ORDERS</string>
    <string name="txt15">MANAGE EMPLOYEE</string>
    <string name="txt16">INVENTORY</string>
    <string name="txt17">CUSTOMER</string>
    <string name="txt18">NIC</string>
    <string name="txt19">Driving License</string>
    <string name="txtValue1">Order ID : </string>
    <string name="txtValue2">Customer NIC :</string>
    <string name="txtValue3">Customer Name :</string>
    <string name="txtValue4">Delivery ID :</string>
    <string name="txtValue5">Status :</string>
    <string name="txtValue6">Address :</string>
    <string name="txtValue7">Email :</string>
    <string name="txtValue8">Phone Number :</string>
    <string name="txtValue9">Password :</string>
    <string name="txtValue10">UserName :</string>
    <string name="btn4">INSERT</string>
    <string name="column9">ORDER ID</string>
    <string name="column10">CUSTOMER ID</string>
    <string name="column11">CUSTOMER NAME</string>
    <string name="column12">STATUS</string>
    <string name="column13">DELIVERY ID</string>
    <string name="column14">UPDATE</string>
    <string name="txt20">WELLCOME TO GROCERY MAD</string>
    <string name="txt21">VEGETABLES</string>
    <string name="txt22">FRUITS</string>
    <string name="txt23">GROCERY</string>
    <string name="btn5">SHOW DETAILS</string>
    <string name="title">MANAGER DASHBOARD</string>
    <string name="view1">VIEW PRODUCTS</string>
    <string name="view2">NEW PRODUCT</string>
    <string name="view3">EDIT PRODUCT</string>
    <string name="view4">"SHOPPING CART "</string>
    <string name="view6">REMOVE PRODUCT</string>
    <string name="view5">SEARCH PRODUCT</string>
    <string name="view7">ADD NEW PRODUCT</string>
    <string name="hint1">Enter Product Name</string>
    <string name="hint2">Enter Price</string>
    <string name="hint3">Enter Category</string>
    <string name="hint4">Enter Item ID</string>
    <string name="col1">PRODUCT NAME</string>
    <string name="col2">CATEGORY</string>
    <string name="col3">PRICE</string>
    <string name="col4">PRODUCT ID</string>
    <string name="name1">Lettuce</string>
    <string name="qty1">1kg</string>
    <string name="price1">Rs. 25.00</string>
    <string name="name2">Carrot</string>
    <string name="price2">Rs. 250.00</string>
    <string name="name3">Red Cabbage</string>
    <string name="price3">Rs. 125.00</string>
    <string name="name4">Red Capsicum</string>
    <string name="name5">Okra</string>
    <string name="name6">Yellow Capsicum</string>
    <string name="name7">Onion</string>
    <string name="name8">Tomato</string>
    <string name="fruit1">Water Melon</string>
    <string name="fruit2">Orange</string>
    <string name="fruit3">Grapes</string>
    <string name="fruit4">Black Grapes</string>
    <string name="fruit5">Pears</string>
    <string name="fruit6">Vilad Mango</string>
    <string name="fruit7">Pomegranate</string>
    <string name="fruit8">Pineapple</string>
    <string name="cart">ADD TO CART</string>
    <string name="btn6">UPDATE</string>
    <string name="cat1">VEGETABLES</string>
    <string name="cat2">FRUITS</string>
    <string name="btn7">BACK</string>
    <string name="btn8">NEXT</string>
    <string name="btn10">SEARCH</string>
    <string name="btn11">CLEAR</string>
    <string name="start">GET START</string>
    <string name="backDash">BACK TO DASHBOARD</string>


    <string name="textView">Full Name</string>
    <string name="textView2">User Name</string>
    <string name="textView3">E-mail</string>
    <string name="textView4">Address </string>
    <string name="textView5">Gender</string>
    <string name="textView6">Phone Number</string>
    <string name="textView7">Item 01</string>
    <string name="textView8">LKR 222</string>
    <string name="textView9">Item 02</string>
    <string name="textView10">LKR 222</string>
    <string name="textView11">Item 03</string>
    <string name="textView12">LKR 222</string>
    <string name="textView13">Item 04</string>
    <string name="textView14">LKR 222</string>
    <string name="button">Update Details</string>
    <string name="button2">Delete Account</string>
    <string name="radioButton">Male</string>
    <string name="radioButton2">Female</string>
    <string name="button4">Remove</string>
    <string name="button8">Remove</string>
    <string name="button9">Remove</string>
    <string name="button10">Remove</string>
    <string name="button11">Checkout</string>
    <string name="sample1">001A</string>
    <string name="sample2">C001</string>
    <string name="sample3">Rashmika De. SIiva</string>
    <string name="sample4">MALABE</string>
    <string name="sample5">Delivered</string>
    <string name="sample6">D0023</string>
    <string name="btn9">DELETE</string>
    <string name="logout">LOG OUT</string>


</resources>
