<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".update_delivery">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/mad"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:hint="@string/column9"
                android:text="@string/sample1"
                android:textColor="@color/black"
                android:background="@drawable/text_background"
                android:inputType="text"
                android:paddingLeft="20dp"
                />


            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:hint="@string/column10"
                android:text="@string/sample2"
                android:textColor="@color/black"
                android:background="@drawable/text_background"
                android:inputType="text"
                android:paddingLeft="20dp"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="240dp"
                android:background="@drawable/text_background"
                android:hint="@string/column11"
                android:text="@string/sample3"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="@color/black"

                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                android:hint="@string/column3"
                android:text="@string/sample4"
                android:textColor="@color/black"
                android:background="@drawable/text_background"
                android:inputType="text"
                android:paddingLeft="20dp"

                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="360dp"
                android:hint="Email"
                android:textColor="@color/black"
                android:background="@drawable/textview"
                android:inputType="text"
                android:paddingLeft="20dp"

                />


            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="360dp"
                android:hint="@string/column12"
                android:text="@string/sample5"
                android:textColor="@color/black"
                android:background="@drawable/text_background"
                android:inputType="phone"
                android:paddingLeft="20dp"

                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="420dp"
                android:hint="@string/column13"
                android:text="@string/sample6"
                android:textColor="@color/black"
                android:background="@drawable/text_background"
                android:inputType="text"
                android:paddingLeft="20dp"

                />


            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="550dp"
                android:background="@drawable/addbutton"
                android:onClick="backOrders"
                android:text="@string/btn6"
                android:textColor="#fff"
                android:textSize="23dp" />








        </RelativeLayout>







    </ScrollView>

</RelativeLayout>