<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewDeliveryBoy"
    android:background="@drawable/background"
    >

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/mad"
                android:layout_marginTop="30dp"
            />

            <EditText
                android:id="@+id/adtxt1"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:background="@drawable/textview"
                android:hint="@string/txt3"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/adtxt2"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:background="@drawable/textview"
                android:hint="@string/txt18"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/adtxt3"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="240dp"
                android:background="@drawable/textview"
                android:hint="@string/txt6"
                android:inputType="text"
                android:paddingLeft="20dp"

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/adtxt4"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                android:background="@drawable/textview"
                android:hint="@string/txt5"
                android:inputType="text"
                android:paddingLeft="20dp"

                android:textColor="@color/black" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="360dp"
                android:hint="Email"
                android:textColor="@color/black"
                android:background="@drawable/textview"
                android:inputType="text"
                android:paddingLeft="20dp"

                />


            <EditText
                android:id="@+id/adtxt5"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="360dp"
                android:background="@drawable/textview"
                android:hint="@string/txt19"
                android:inputType="phone"
                android:paddingLeft="20dp"

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/adtxt6"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="420dp"
                android:background="@drawable/textview"
                android:hint="@string/txt4"
                android:inputType="text"
                android:paddingLeft="20dp"

                android:textColor="@color/black" />


            <EditText
                android:id="@+id/adtxt7"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="480dp"
                android:background="@drawable/textview"
                android:hint="@string/txt8"
                android:inputType="text"
                android:paddingLeft="20dp"

                android:textColor="@color/black" />


            <Button
                android:id="@+id/adbtn1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="620dp"
                android:background="@drawable/addbutton"
                android:text="@string/btn4"
                android:textColor="#fff"
                android:textSize="23dp" />


        </RelativeLayout>







</ScrollView>


</RelativeLayout>