<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".on_board">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/dotLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="700dp"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="700dp"
        android:background="@color/pureWhite"
        android:text="@string/btn7"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="750dp"
        android:layout_marginLeft="300dp"
        android:text="@string/btn8"
        android:background="@color/pureWhite"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:layout_marginTop="450dp"
        android:background="@drawable/button_corner"/>


</RelativeLayout>